--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.bacon.react-scan-ext",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false,
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
